--- a/scripts/eeSurv_mixedEffects.Rmd
+++ b/scripts/eeSurv_mixedEffects.Rmd
@@ -19,7 +19,7 @@ editor_options:
 
 ```{r}
 library(survival)
-#library(coxme)
+library(coxme)
 library(rstanarm)
 library(tidyverse)
 library(cowplot)
