--- a/scripts/ee_cph_model.Rmd
+++ b/scripts/ee_cph_model.Rmd
@@ -30,134 +30,74 @@ eelife <- read.csv("../processed/eeAlldat.csv") %>%
 # cols <- c("cageID", "larv_adult", "larvalTreat", "adultTreat","sex")
 # eelife[cols] <- lapply(eelife[cols], factor)  
 eelife$age <- as.numeric(eelife$age)
+eelife$status <- as.numeric(eelife$status)
 # sapply(eelife, class)
 
-
 ```
 
-# Assuming interaction effects only:
-
-```{r}
-imod1.0 <- coxph(Surv(age, status) ~  larvalTreat + adultTreat + sex, 
-                 data = eelife)
-summary(imod1.0) # some interaction effect
-cox.zph(imod1.0)
-tab_model(imod1.0,file="additiveMod.doc")
-
-
-imod1.1 <- coxph(Surv(age, status) ~  larvalTreat*adultTreat + sex, 
-                 data = eelife)
-summary(imod1.1) # some interaction effect
-cox.zph(imod1.1)
-ggforest(imod1.1, data = eelife)
-# All terms come out sig, including larval effects, and interaction effects
-# Only adult diet passes PH test
-```
-
-# Assuming additive and interaction effects:
-
-```{r}
-imod1.2.0 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + sex + 
-                     larvalTreat*adultTreat, 
-                   data = eelife)
-summary(imod1.2.0)
-cox.zph(imod1.2.0)
-par(mfrow=c(2,2))
-plot(cox.zph(imod1.2.0))
-# Identical results as imod1.1 above
-# So, running just an interaction is equivalent to adding additives
-```
-
-# Stratified regression to address non-PH condition:
-
-# Full model
+# A full model
 
 Addressing non-proportional hazards: https://cran.r-project.org/web/packages/Greg/vignettes/timeSplitter.html
 vignette("timedep", package = "survival")
 
 ```{r}
-imod1.2.1 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + cageID + 
-                     larvalTreat*adultTreat + 
-                     strata(sex), data = eelife)
-summary(imod1.2.1)
-cox.zph(imod1.2.1)
-#ggforest(imod1.2, data = eelife) #undefined columns (strata??)
-# Robust effect of adult diet, larval diet nsig
-extractAIC(imod1.2.1)
-tidy(imod1.2.1,exponentiate = TRUE)
-glance(imod1.2.1)
-plot(survfit(imod1.2.1, transform="km", global=TRUE))
-plot(cox.zph(imod1.2.1,transform="km", global=TRUE))
-# All terms are sig if sex is stratified
-# PHs look good, although somewhat marginal for larval and interaction effects
+imod1.0 <- coxph(Surv(age, status) ~  larvalTreat + adultTreat + 
+                   larvalTreat*adultTreat + sex + cageID, 
+                 data = eelife)
+summary(imod1.0) 
+cox.zph(imod1.0) # very NPH
+
+# extractAIC(imod1.0)
+# tidy(imod1.0,exponentiate = TRUE)
+# glance(imod1.0)
+# plot(survfit(imod1.0, transform="km", global=TRUE))
+# plot(cox.zph(imod1.0,transform="km", global=TRUE))
+# tab_model(imod1.0,file="additiveMod.doc")
+
+# Stratify on sex (cageID cannot be stratified)
+imod1.1 <- coxph(Surv(age, status) ~  larvalTreat + adultTreat + 
+                   larvalTreat*adultTreat + strata(sex) + cageID, 
+                 data = eelife)
+summary(imod1.1)
+survfit(imod1.1) # estimates K different baseline hazardfunctions, one for each stratum
+cox.zph(imod1.1) # still NPH, due to cageID
+
+anova(imod1.0,imod1.1)
+# Stratifying improves model, but still NPH
+
+library(coxphw)
+fit2<-coxphw(data=eelife, Surv(age,status) ~ larvalTreat + adultTreat + 
+                   larvalTreat*adultTreat + strata(sex), template = "AHR" )
+# template = PH for unweighted coxph; 
+# template = ARE for estimation of average hazard ratios
+# template = AHR for estimation of average hazard ratios
+
+summary(fit2)
+
 ```
 
-# Without cage id
+# Cage as random effect
 
 ```{r}
-imod1.2.2 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
-                     larvalTreat*adultTreat + 
-                     strata(sex), data = eelife)
-summary(imod1.2.2) # 2 cages have sig cage effects
-anova(imod1.2.2)
-cox.zph(imod1.2.2) # cageID NPH
-extractAIC(imod1.2.2)
-tidy(imod1.2.2,exponentiate = TRUE)
-glance(imod1.2.2)
-# Diet effects disappear when cage is accounted for; larval diet sig at p = 0.1
-# Cage effects are sig for C_DR2 and DR_DR1 (both p = 0.001)
-# CageID fails PH test
-
-anova(imod1.1,imod1.2.1,imod1.2.2)
-
-rm(imod1.0,imod1.2.0,imod1.1,imod1.2.1,imod1.2.2)
-```
-
-## cageID as random effect
-
-```{r}
-eelife$status <- as.numeric(eelife$status)
-stem(table(eelife$cageID))
-
-cph2.1.0 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + 
+imod1.2 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + 
                   larvalTreat*adultTreat + strata(sex) +
                   (1 | cageID), data = eelife)
-summary(cph2.1.0)
-car::Anova(cph2.0, type="II")
-# Only adult diet is sig in the fixed effects
+summary(imod1.2) 
+# Interaction not sig.
+car::Anova(imod1.2, type="II")
+# car::Anova(imod1.2, type="III"); use only if no interactions are involved
+
+aictab(list(imod1.0,imod1.1)) # imod1.1 is better (i.e. stratified)
+anova(imod1.1, imod1.2)
+# cageID cannot be ignored
 
 
+# Drop interaction
+imod1.3 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + 
+                    strata(sex) + (1| cageID), data = eelife)
+summary(imod1.3)
 
-cph2.1.1 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + 
-                    strata(sex) + (1 | cageID), data = eelife)
-summary(cph2.1.1)
-car::Anova(cph2.1.1, type="III")
-
-
-cph2.1.2 <- coxme(Surv(age, status) ~ larvalTreat*adultTreat + 
-                    strata(sex) + (1 | cageID), data = eelife)
-summary(cph2.1.2)
-#car::Anova(cph2.3, type="III")
-# cph2.2 and cph2.3 achieve same thing for additive terms only
-
-
-# To look at random treatment effects within center we can add a nested effect
-cph3.1.0 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + sex +
-                  (1 | cageID/larvalTreat), eelife)  
-summary(cph3.1.0)
-
-cph3.1.1 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + sex +
-                  (1 | cageID/adultTreat), eelife)  
-summary(cph3.1.1)
-
-cph3.1.2 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + sex +
-                  (1 | cageID/sex), eelife)  
-summary(cph3.1.2)
-# 3.1, 3.2 and 3.3 give identical results
-
-cph3.1.3 <- coxme(Surv(age, status) ~ larv_adult + strata(sex) +
-                  (1 | cageID/strata( sex)), eelife)  
-summary(cph3.1.3)
+anova(imod1.1,imod1.2,imod1.3,imod1.4,imod1.5,imod1.6)
 
 ```
 
