--- a/scripts/ee_cph_model.Rmd
+++ b/scripts/ee_cph_model.Rmd
@@ -9,6 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(survival)
 library(survminer)
 library(coxme)
+library(coxphw)
 library(splines) 
 library(tidyverse) 
 library(forcats)
@@ -42,7 +43,7 @@ vignette("timedep", package = "survival")
 
 ```{r}
 imod1.0 <- coxph(Surv(age, status) ~  larvalTreat + adultTreat + 
-                   larvalTreat*adultTreat + sex + cageID, 
+                   larvalTreat*adultTreat + sex + cluster(cageID), 
                  data = eelife)
 summary(imod1.0) 
 cox.zph(imod1.0) # very NPH
@@ -56,7 +57,7 @@ cox.zph(imod1.0) # very NPH
 
 # Stratify on sex (cageID cannot be stratified)
 imod1.1 <- coxph(Surv(age, status) ~  larvalTreat + adultTreat + 
-                   larvalTreat*adultTreat + strata(sex) + cageID, 
+                   larvalTreat*adultTreat + strata(sex) + cluster(cageID), 
                  data = eelife)
 summary(imod1.1)
 survfit(imod1.1) # estimates K different baseline hazardfunctions, one for each stratum
@@ -65,14 +66,18 @@ cox.zph(imod1.1) # still NPH, due to cageID
 anova(imod1.0,imod1.1)
 # Stratifying improves model, but still NPH
 
-library(coxphw)
-fit2<-coxphw(data=eelife, Surv(age,status) ~ larvalTreat + adultTreat + 
-                   larvalTreat*adultTreat + strata(sex), template = "AHR" )
+aictab(list(imod1.0,imod1.1)) # imod1.1 is better (i.e. stratified)
+
+
+# An alternate approach: Weighted estimation
+ialt1.0 <- coxphw(Surv(age,status) ~ larvalTreat + adultTreat + 
+                   larvalTreat*adultTreat + strata(sex) + cageID, 
+                  data=eelife, template = "AHR" )
 # template = PH for unweighted coxph; 
 # template = ARE for estimation of average hazard ratios
 # template = AHR for estimation of average hazard ratios
 
-summary(fit2)
+summary(ialt1.0)
 
 ```
 
@@ -87,25 +92,9 @@ summary(imod1.2)
 car::Anova(imod1.2, type="II")
 # car::Anova(imod1.2, type="III"); use only if no interactions are involved
 
-aictab(list(imod1.0,imod1.1)) # imod1.1 is better (i.e. stratified)
 anova(imod1.1, imod1.2)
 # cageID cannot be ignored
 
-
-# Drop interaction
-imod1.3 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + 
-                    strata(sex) + (1| cageID), data = eelife)
-summary(imod1.3)
-
-anova(imod1.1,imod1.2,imod1.3,imod1.4,imod1.5,imod1.6)
-
-```
-
-```{r}
-tab_model(imod1.2.1,imod1.2.2,cph2.1,cph2.2, file="selectedMods.doc")
-tab_model(cph3.4, file = "coxmeNested") # spits error
-
-rm(cph2.1.0,cph2.1.1,cph2.1.2,cph3.1.0,cph3.1.1,cph3.1.2,cph3.1.3)
 ```
 
 # Model test (individual life stage diet effects)
@@ -309,4 +298,12 @@ anova(smod1.3.1, smod1.3.2)
 # smod1.2.1 is best
 ```
 
+# Tables
+
+```{r}
+tab_model(imod1.2.1,imod1.2.2,cph2.1,cph2.2, file="selectedMods.doc")
+tab_model(cph3.4, file = "coxmeNested") # spits error
+
+rm(cph2.1.0,cph2.1.1,cph2.1.2,cph3.1.0,cph3.1.1,cph3.1.2,cph3.1.3)
+```
 
